added images folder

--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,24 @@ h1 {
   text-align: center;
   margin: 0;
 }
+
+.blueberries {
+  
+}
+
+.grapes {
+  
+}
+
+.red currant {
+  
+}
+
+
+
+
+
+
+
+
+
