--- a/css/main.css
+++ b/css/main.css
@@ -27,18 +27,40 @@ h1 {
 }
 
 .blueberries {
-  
+  background-image: url(../images/blueberries.jpg);
 }
 
 .grapes {
-  
+  background-image: url(../images/grapes.jpg);
 }
 
-.red currant {
-  
+.red-currant {
+  background-image: url(../images/red-currant.jpg);
 }
 
+.blueberries, .grape, .red-currant {
+  background-size: cover;
+  background-position: center;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+}
 
+.whitebg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.75);
+  margin: 0;
+  padding: 0;
+}
+
+.heading {
+  margin: 0 0 0 1em;
+}
+
+.list {
+  margin: 0 1em;
+}
 
 
 
